# structural-anchor-pruning

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
experiments/: README.md  run_fixed_ratio_benchmark.py  run_fixed_ratio_benchmark_compared_train.py  run_layer_comparison.py  run_sweep_ratio_benchmark.py
src/sap/: __init__.py  centrality.py  evaluation.py  pruning.py  scoring.py  utils.py
src/sap/attention/: __init__.py  colpali.py  colqwen2.py  jina.py
tests/: conftest.py  test_centrality.py  test_evaluation.py  test_pruning.py  test_scoring.py
