[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sap"]

[project]
name = "structural-anchor-pruning"
version = "0.1.0"
description = "Structural Anchor Pruning (SAP) for scalable multi-vector Visual RAG indexing"
authors = [
    { name = "Zhuchenyang Liu" },
    { name = "Ziyu Hu" },
    { name = "Yao Zhang" },
    { name = "Yu Xiao" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 3 - Alpha",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
colpali = [
    "colpali-engine>=0.3.0",
]
jina = [
    "transformers>=4.40.0",
]
experiments = [
    "colpali-engine>=0.3.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "scikit-learn>=1.3.0",
    "pillow>=10.0.0",
    "tqdm>=4.60.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/Ryenhails/structural-anchor-pruning"
Repository = "https://github.com/Ryenhails/structural-anchor-pruning"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"experiments/*" = ["ALL"]
